syntax = "proto3";

package greet;

option go_package = "github.com/turanheydarli/grpc-go/greet/proto";


message GreetRequest {
    string firstName = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse) {}
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse) {}
}